syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";
import "base/common.proto";
option csharp_namespace = "aries.galile.grpc";
package aries;

// 搜索请求项
message SearchReq {
   string Keyword=1;
   repeated string KeywordFields=3;
   AriesPage Page=2;
}
//搜索请求项（按分类）
message SearchByIndexReq{
  string Keyword=1;
  repeated string KeywordFields=4;
  string Index=2;
  AriesPage Page=3;
}
//提示请求项
message AutoCompleteReq{
   string Keyword=1;
}
message TopReq{
  int32 Top=1;
}